# openrx

./: .env.example  .gitignore  .mcp.json  .vercelignore  AGENTS.md  CLAUDE.md  ENGINEERING_PROMPT.md  README.md  SOUL.md  healthcare_nav_agent_prompts.md  lighthouserc.json  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  playwright.domain.config.cjs  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
tools/researcher-vm/: .env.example  .gitignore  AGENTS.md  README.md  program.md  pyproject.toml
tools/researcher-vm/.githooks/: pre-commit
tools/researcher-vm/config/: local_secrets.example.env
tools/researcher-vm/data/: agent_watchlist.json  agent_watchlist_kraken.json  companies.json  sentiment_feed.json  tao_bot.json  trading_strategy.json  trading_strategy_kraken.json  weights.json
tools/researcher-vm/deploy/: README.md
tools/researcher-vm/docs/: DEPLOYMENT_ARCHITECTURE.md  GAPS.md  MACHINE_TREE.md  STRUCTURE.md  WORK_TREE.md
tools/researcher-vm/notes/: coinbase.md
tools/researcher-vm/prompts/: master_committee.md  post_trade_review.md  sentiment_refresh.md  tao_max_stack.md  weekly_style_review.md
tools/researcher-vm/researcher/: __init__.py  __main__.py  agents.py  alerts.py  autopilot.py  backtesting.py  cli.py  coinbase.py  dashboard.py  exchange.py  improvement.py  kraken.py  prompts.py  reporting.py  runtime_store.py  scoring.py  secrets.py  tao_bot.py  trading.py
tools/researcher-vm/scripts/: export-standalone.sh  install-hermes.sh  install-hooks.sh  render-dashboard.sh  run-autopilot.sh  (+7 more)
(+398 files in other folders)
